# ChangeLog for dev-ruby/activerecord
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.96 2009/01/10 16:31:50 armin76 Exp $

  10 Jan 2009; Raúl Porcel <armin76@gentoo.org> activerecord-2.2.2.ebuild:
  ia64 stable wrt #253425

  09 Jan 2009; Brent Baude <ranger@gentoo.org> activerecord-2.2.2.ebuild:
  Marking activerecord-2.2.2 ppc for bug 253425

  07 Jan 2009; Ferris McCormick <fmccor@gentoo.org>
  activerecord-2.2.2.ebuild:
  Sparc stable, Bug #253425.

  07 Jan 2009; Brent Baude <ranger@gentoo.org> activerecord-2.2.2.ebuild:
  Marking activerecord-2.2.2 ppc64 for bug 253425

  04 Jan 2009; Markus Meier <maekke@gentoo.org> activerecord-2.2.2.ebuild:
  amd64/x86 stable, bug #253425

*activerecord-2.2.2 (27 Nov 2008)

  27 Nov 2008; Hans de Graaff <graaff@gentoo.org>
  +activerecord-2.2.2.ebuild:
  Version bump for Rails 2.2.2

  17 Nov 2008; Hans de Graaff <graaff@gentoo.org>
  -activerecord-2.0.2.ebuild, -activerecord-2.0.4.ebuild,
  -activerecord-2.1.0.ebuild, -activerecord-2.1.1.ebuild:
  Remove old, insecure, versions

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  activerecord-2.0.5.ebuild, activerecord-2.1.2.ebuild:
  ppc stable, bug #237385

  06 Nov 2008; Raúl Porcel <armin76@gentoo.org> activerecord-2.1.2.ebuild:
  ia64 stable wrt #237385

  05 Nov 2008; Markus Meier <maekke@gentoo.org> activerecord-2.0.5.ebuild:
  amd64/x86 stable, bug #237385

  04 Nov 2008; Brent Baude <ranger@gentoo.org> activerecord-2.0.5.ebuild,
  activerecord-2.1.2.ebuild:
  Marking activerecord-2.0.0|2.1.2 ppc64 stable for bug 237385

  03 Nov 2008; Markus Meier <maekke@gentoo.org> activerecord-2.1.2.ebuild:
  amd64/x86 stable, bug #237385

  03 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  activerecord-2.0.5.ebuild, activerecord-2.1.2.ebuild:
  Sparc stable, Security Bug #237385.

*activerecord-2.1.2 (24 Oct 2008)

  24 Oct 2008; Hans de Graaff <graaff@gentoo.org>