@@ -1,23 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/activerecord-2.1.1.ebuild,v 1.1 2008/09/13 09:06:38 graaff Exp $
-
-EAPI="prefix"
-
-inherit ruby gems
-
-DESCRIPTION="Implements the ActiveRecord pattern (Fowler, PoEAA) for ORM"
-HOMEPAGE="http://rubyforge.org/projects/activerecord/"
-
-LICENSE="MIT"
-SLOT="2.1"
-KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
-IUSE="mysql postgres sqlite sqlite3"
-RESTRICT="test"
-
-DEPEND=">=dev-lang/ruby-1.8.5
-	~dev-ruby/activesupport-2.1.1
-	sqlite? ( >=dev-ruby/sqlite-ruby-2.2.2 )
-	sqlite3? ( dev-ruby/sqlite3-ruby )
-	mysql? ( >=dev-ruby/mysql-ruby-2.7 )
-	postgres? ( >=dev-ruby/ruby-postgres-0.7.1 )"
