@@ -1,22 +1,23 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/activerecord-2.1.0.ebuild,v 1.1 2008/06/17 05:40:54 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/activerecord-2.3.2.ebuild,v 1.1 2009/03/17 10:49:38 a3li Exp $
 
 EAPI="prefix"
 
 inherit ruby gems
+USE_RUBY="ruby18 ruby19"
 
 DESCRIPTION="Implements the ActiveRecord pattern (Fowler, PoEAA) for ORM"
 HOMEPAGE="http://rubyforge.org/projects/activerecord/"
 
 LICENSE="MIT"
-SLOT="2.1"
+SLOT="2.3"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE="mysql postgres sqlite sqlite3"
 RESTRICT="test"
 
-DEPEND=">=dev-lang/ruby-1.8.5
-	~dev-ruby/activesupport-2.1.0
+DEPEND=">=dev-lang/ruby-1.8.6
+	~dev-ruby/activesupport-2.3.2
 	sqlite? ( >=dev-ruby/sqlite-ruby-2.2.2 )
 	sqlite3? ( dev-ruby/sqlite3-ruby )
 	mysql? ( >=dev-ruby/mysql-ruby-2.7 )
