@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/activerecord
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.96 2009/01/10 16:31:50 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.97 2009/03/17 10:49:38 a3li Exp $
+
+*activerecord-2.3.2 (17 Mar 2009)
+
+  17 Mar 2009; Alex Legler <a3li@gentoo.org> +activerecord-2.3.2.ebuild:
+  Version bump
 
   10 Jan 2009; Raúl Porcel <armin76@gentoo.org> activerecord-2.2.2.ebuild:
   ia64 stable wrt #253425
